changes done in current code

--- a/src/Components/HomeComponents/HowItWork/Work.css
+++ b/src/Components/HomeComponents/HowItWork/Work.css
@@ -19,7 +19,7 @@
   gap: 3rem;
 }
 
-.content-container {
+.content-containers {
   /* border: 1px solid rgba(128, 128, 128, 0.459); */
   padding: 2rem;
   width: 100%;
