--- a/src/Components/SearchedFlightComponents/MainFormRightSection/RightContainer.css
+++ b/src/Components/SearchedFlightComponents/MainFormRightSection/RightContainer.css
@@ -6,50 +6,6 @@
   display: none;
 }
 
-.callUsNow {
-  border: 0.5px solid rgba(151, 149, 149, 0.489);
-  border-radius: 5px;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.callUsNowContent h3 {
-  font-size: 1.8rem;
-  margin: 0;
-  font-weight: 600;
-  line-height: 1.2;
-}
-
-.callUsNowContent h4 {
-  font-size: 0.9rem;
-  color: #df4477;
-  margin: 0;
-  font-weight: 600;
-  line-height: 1.3;
-}
-
-.callUsNow .phoneNumberBtn {
-  background: var(--btnColor);
-  padding: 0.8rem 1rem;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-
-.phoneNumberBtn a {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  /* justify-content: space-between; */
-}
-
-.phoneNumberBtn svg {
-  font-size: 1.5rem;
-}
-
 .contectUsContent {
   display: flex;
   align-items: center;
@@ -74,119 +30,48 @@
 .formContent {
 } */
 
-.dropdown-contents {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.dropdown .btn {
-  border: none;
-  background: var(--stepSectionBgColor);
-  color: var(--peragraphTextColor);
-}
-
-.search-form_row {
+.formDiv-container {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  gap: 1rem;
+  max-height: 490px;
 }
 
-.location-blocks {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.form-group {
-  padding: 0.8rem;
-  border: 0.5px solid rgba(128, 128, 128, 0.269);
+.modify-cardDiv {
   display: flex;
   flex-direction: column;
-  width: 48%;
-  border-radius: 5px;
+  gap: 1rem;
 }
 
-.form-group input {
-  border: none;
-  outline: none;
-}
-
-.search-from-period {
-  display: flex;
-  justify-content: space-between;
-}
-
-.personal-details-field {
+.modify-column-input {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  gap: 1rem;
+  width: 100%;
 }
 
-.nameAndEmail {
-  display: flex;
-  justify-content: space-between;
-  /* width: 100%; */
-}
-
-.nameAndEmail .input-field {
-  width: 48%;
-}
-
-.nameAndEmail input {
-  padding: 0.8rem;
-  border: 0.5px solid rgba(128, 128, 128, 0.269);
+.modify-column-search {
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
   width: 100%;
+  gap: 1rem;
 }
 
-.number-field {
-  width: 100%;
-  border: 1px solid rgba(128, 128, 128, 0.409);
-  border-radius: 5px;
-}
-
-.number-input-field {
+.modify-input-field {
   display: flex;
-  padding: 0.8rem;
-  flex-direction: row-reverse;
-  justify-content: space-between;
+  border: 1px solid rgba(128, 128, 128, 0.66);
+  padding: 0 1rem;
 }
 
-.number-input-field .verticalLine {
-  padding: 0px 10px;
+.modify-flight-class {
+  cursor: pointer;
+  border: 1px solid rgba(128, 128, 128, 0.66) !important;
 }
 
-.input-group input,
-select {
-  border: none;
-  outline: none;
-}
-
-.input-group select {
-  width: 100%;
-}
-
-.input-select-field {
-  width: 20%;
-}
-
-.input-number-field {
-  width: 70%;
-}
-
-.input-group input {
-  width: 70%;
-}
-
-.number-field input {
-  width: 100%;
-}
-
-.getFreeQuoteBtn {
-  width: 100%;
+.modifyBtn button{
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
 
 .getFreeQuoteBtn button {
@@ -209,20 +94,13 @@ select {
   color: var(--textColor);
 }
 
+.modify-passenger-option {
+  left: 0 !important;
+  top: -7.5rem !important;
+  border: 0.5px solid rgba(128, 128, 128, 0.459);
+}
+
 @media (max-width: 1400px) {
-  .callUsNowContent h3 {
-    font-size: 1.3rem;
-  }
-
-  .callUsNowContent h4 {
-    font-size: 0.8rem;
-  }
-
-  .callUsNow .phoneNumberBtn {
-    font-size: 1rem;
-    padding: 0.6rem 0.8rem;
-  }
-
   .contentInPera p {
     font-size: 0.8rem;
   }
@@ -236,55 +114,18 @@ select {
   .contactUsHeading {
     display: block;
     text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .contactUsHeading h3 {
+    font-size: 1.2rem;
   }
 
   .upper-content {
     display: none;
   }
 
-  .dropdown-content {
-    display: none;
-  }
-
-  .search-form {
-    display: none;
-  }
-
-  .nameAndEmail .name-field {
-    display: none;
-  }
-
-  .nameAndEmail .email-field {
-    width: 100%;
-  }
-
-  .input-select-field {
-    width: 10%;
-  }
-
-  .input-number-field {
-    width: 100%;
-  }
-
   .number-input-field .verticalLine {
     display: block;
-  }
-}
-
-@media(max-width:1000px) {
-  .input-select-field {
-    width: 20%;
-  }
-}
-
-@media(max-width:700px) {
-  .input-select-field {
-    width: 25%;
-  }
-}
-
-@media(max-width:500px) {
-  .input-select-field {
-    width: 30%;
   }
 }
