--- a/src/Components/SearchedFlightComponents/Popup/Popup.css
+++ b/src/Components/SearchedFlightComponents/Popup/Popup.css
@@ -60,11 +60,11 @@
 }
 
 .content-container {
-  width: 60%;
+  width: 60% !important;
 }
 
 .content-container .content {
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -102,6 +102,35 @@
   padding: 0.5rem 1.5rem;
 }
 
+.nameAndEmail {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.nameAndEmail .input-field {
+  border: 1px solid rgba(128, 128, 128, 0.66);
+}
+
+.number-field {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.input-select-field {
+  width: 20%;
+}
+
+.input-select-field select {
+  border: none;
+  outline: none;
+  background: #fff;
+}
+
+.popup-hidden {
+  display: none;
+}
+
 @media (max-width: 1400px) {
   .popup {
     width: 60%;
@@ -114,7 +143,7 @@
   }
 
   .content-container {
-    width: 100%;
+    width: 100% !important;
   }
 }
 
@@ -122,5 +151,14 @@
   .popup {
     width: 80%;
     /* height: 8/0%; */
+  }
+}
+
+@media (max-width: 500px) {
+  .content-container .content {
+    padding: 0rem;
+  }
+  .input-field {
+    border: 1px solid rgba(128, 128, 128, 0.66) !important;
   }
 }
