flight detials page changes

--- a/src/Components/HomeComponents/SubHeader/SubHeader.css
+++ b/src/Components/HomeComponents/SubHeader/SubHeader.css
@@ -1,3 +1,11 @@
+.subHeader-section {
+    position: sticky;
+    top: 75px;
+    width: 100%;
+    z-index: 1000;
+    background: #fff;
+}
+
 .subHeader-container {
     width: 100%;
     margin: auto;
