--- a/src/Components/SearchedFlightComponents/MainFormRightSection/RightContainer.css
+++ b/src/Components/SearchedFlightComponents/MainFormRightSection/RightContainer.css
@@ -1,5 +1,6 @@
 .right-container-content {
-  padding: 1.8rem;
+  padding: 1rem;
+  max-height: 380px;
 }
 
 .contactUsHeading {
@@ -34,7 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-height: 490px;
+  /* max-height: 400px; */
 }
 
 .modify-cardDiv {
@@ -44,15 +45,15 @@
 }
 
 .modify-column-input {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
   width: 100%;
 }
 
 .modify-column-search {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   width: 100%;
   gap: 1rem;
 }
@@ -96,7 +97,7 @@
 
 .modify-passenger-option {
   left: 0 !important;
-  top: -7.5rem !important;
+  top: -3.2rem !important;
   border: 0.5px solid rgba(128, 128, 128, 0.459);
 }
 
@@ -127,5 +128,20 @@
 
   .number-input-field .verticalLine {
     display: block;
+  }
+}
+
+@media(max-width:980px) {
+  .modify-column-input {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .right-container-content {
+    max-height: 500px;
+  }
+  .modify-column-input {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
