--- a/src/Components/SearchedFlightComponents/RecentCheapDeals/RecentDeals.css
+++ b/src/Components/SearchedFlightComponents/RecentCheapDeals/RecentDeals.css
@@ -1,7 +1,14 @@
-.recemtDeal-container {
-  /* padding: 2rem; */
-  margin: 2rem auto;
+.recentDealsSection {
+  padding: 2rem 1rem;
   width: 90%;
+  margin: auto;
+}
+
+.recemtDeal-container {
+  width: 100%;
+  /* padding: 2rem 0rem; */
+  /* margin: 2rem auto; */
+  /* width: 90%; */
 }
 
 .heading h3 {
@@ -9,15 +16,57 @@
   font-weight: 600;
 }
 
-.recentCards {
-  margin: 2rem 0;
+.flight_filter-flight_details {
+  /* display: grid; */
+  gap: 1rem;
+  grid-template-columns: 1fr 3fr;
+  justify-content: space-between;
+  margin: 2rem 0rem;
+}
+
+.filter-flights {
+  width: 100%;
+}
+
+.filter-container {
+  border: 1px solid rgba(128, 128, 128, 0.349);
+  height: max-content;
+  border-radius: 5px;
+  padding: 1.1rem;
+}
+
+.filter-container form {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.checkbox-input-field {
+  line-height: 2rem;
+}
+
+.checkbox-input-field label {
+  padding: 0rem 1rem;
+}
+
+.filter-input-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.recentCards {
+  /* margin: 2rem 0; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 
 .recentCard {
-  width: 32%;
+  width: 100%;
   border: 1px solid rgba(128, 128, 128, 0.349);
   border-radius: 5px;
   cursor: pointer;
@@ -29,10 +78,10 @@
 }
 
 .card-contents {
-  padding: 1.5rem;
+  padding: 1.1rem;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  /* gap: 15px; */
 }
 
 .card-title h5 {
@@ -42,12 +91,14 @@
 
 .fromAndPrice {
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   justify-content: space-between;
 }
 
-.flight-from {
+.flight-from,
+.flight-to {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 10px;
 }
@@ -58,7 +109,13 @@
 
 .flight-cityname {
   display: flex;
-  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  /* flex-direction: column; */
+}
+
+.plane {
+  font-size: 1.5rem;
 }
 
 .flight-cityname h4 {
@@ -72,9 +129,26 @@
 }
 
 .flight-price {
-  font-size: 2rem;
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.flight-price p {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.bookBtn {
+  border: none;
+  outline: none;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  font-weight: 600;
+  border-radius: 3px;
+  background: var(--gradientColor);
 }
 
 @media (max-width: 1200px) {
@@ -84,6 +158,21 @@
   }
   .recentCard {
     width: 100%;
+  }
+}
+
+@media (max-width: 990px) {
+  .flight_filter-flight_details {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .filter-container form {
+    flex-direction: column;
+  }
+
+  .recentCards {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
